apps/base/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: homeassistant
        image: ghcr.io/home-assistant/home-assistant:2025.1.3
        ports:
        - containerPort: 8123
        volumeMounts:
        - name: homeassistant-config
          mountPath: /config
        - name: homeassistant-configuration
          mountPath: /config/configuration.yaml
          subPath: configuration.yaml
        resources:
          limits:
            memory: "2000Mi"
            cpu: "1000m"
          requests:
            memory: "1000Mi"
            cpu: "500m"
        securityContext:
          privileged: false
          runAsUser: 0
          runAsGroup: 0
        livenessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: homeassistant-config
        persistentVolumeClaim:
          claimName: homeassistant-config-pvc
      - name: homeassistant-configuration
        configMap:
          name: homeassistant-config
