apps/base/homeassistant/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassistant.wc`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
  tls:
    secretName: homeassistant-tls
